# ifa-claude

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
alembic/: env.py
docs/: OPERATIONS.md  architecture.md  audit-pre-b8.md  automation_interface_audit.md  data-accuracy-guidelines.md  database-schema.md  family-reference.md  main-three-aux-deep-dive.md  master_task_list.md  multi-agent-deployment.md  ningbo-deep-dive.md  pdf-tool.md  research-deep-dive.md  run-modes.md  scoring-principles.md  smartmoney-deep-dive.md  sme-data-logic-contracts.md  sme-mvp1-work-list.md  sme-product-design.md  stock-edge-deep-dive.md  stock-intel-deep-dive.md  stock_edge_diagnostic_implementation_audit.md  stock_edge_diagnostic_product_definition.md  stock_edge_full_history_validation.md  stock_edge_sector_cycle_leader_design.md  stock_edge_telegram_skill_prompt.md  stock_edge_tuning_execution_plan_v1.md  stock_edge_tuning_work_list.md  stock_edge_v2_2_5_10_20_decision_design.md  stock_edge_v2_2_5_10_20_objective_refactor.md  stock_edge_v2_2_backfill_execution_recommendation.md  stock_edge_v2_2_decision_layer_handoff.md  stock_edge_v2_2_decision_layer_implementation_report.md  stock_edge_v2_2_strategy_tuning_coverage.md  stock_edge_v2_2_tuning_architecture_review.md  stock_edge_v2_2_tuning_governance_handover_2026_05_05.md  stock_edge_v2_2_tuning_handover_2026_05_05.md  stock_edge_v2_2_tuning_runtime_handoff.md  stock_edge_weekly_tune_runbook.md  sw-migration.md  (+18 more)
ifa/: __init__.py  config.py
reports/: ta_evening_2026-04-28.html  (+2 more)
(+589 files in other folders)
